<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="widget_media_controller">Media controller</string>
    <string name="widget_dpad">D-pad</string>

    <!-- Activities -->
    <string name="title_tv">Tv remote</string>
    <string name="title_robots">Robot control</string>
    <string name="title_lights">Lights</string>
    <string name="title_hifi">Hifi</string>
    <string name="title_nao">Nao</string>
    <string name="title_settings">Settings</string>
    <string name="title_computer">Computer</string>
    <string name="title_application_launcher">Applications</string>
    <string name="title_filemanager">File Explorer</string>
    <string name="title_admin">Admin</string>
    <string name="title_server_select">Connect to</string>
    <string name="title_server_edit">Server to edit</string>
    <string name="title_explorer">Explorer</string>

    <!-- Nao activity -->
    <string name="title_app_list">Applications</string>
    <string name="title_app_store">Robot App Store</string>
    <string name="title_show_nao">See my Nao</string>

    <!-- Menu -->
    <string name="menu_server_list">Manage servers</string>
    <string name="menu_keyboard">Virtual keyboard</string>
    <string name="menu_server_config">Server config</string>

    <!-- Actions -->
    <string name="refresh">Refresh</string>
    <string name="retry">Retry</string>
    <string name="delete">Delete</string>

    <!-- Preference names -->
    <string name="about">About</string>
    <string name="developer">Developer</string>
    <string name="website">Developer website</string>
    <string name="app_version_title">App version</string>

    <!-- Directions -->
    <string name="left">Left</string>
    <string name="up">Up</string>
    <string name="right">Right</string>
    <string name="down">Down</string>

    <!-- Other -->
    <string name="msg_wifi_disabled">Wifi disabled. You are using mobile networks.</string>
    <string name="msg_light_control_not_available">Lights control is not available yet</string>
    <string name="msg_hifi_control_not_available">Hifi control is not available yet</string>
    <string name="msg_command_succeeded">Command succeeded</string>
    <string name="msg_command_running">Command is running…</string>
    <string name="msg_command_failed">Command failed</string>
    <string name="msg_null_request">Request is null</string>
    <string name="msg_no_more_permit">No more permit available!</string>
    <string name="msg_no_path_defined">Can\'t browse the files. No path has been defined.</string>
    <string name="confirm_kill_server">You are about to kill the server. Would you like to continue?</string>
    <string name="confirm_command">Confirm the command?</string>
    <string name="filemanager_image_description">Image that represents the file or folder</string>
    <string name="filemanager_empty_directory">This directory is empty.</string>
    <string name="power">Power</string>
    <string name="add">Add</string>
    <string name="load_from_file">Load from file</string>
    <string name="progress">0%</string>
    <string name="no_content">No item to display</string>
    <string name="new_server">New server…</string>

    <string name="action_image_description">Action icon</string>
    <string name="device_image_description">Device icon</string>
    <string name="signal_indicator_image_description">Signal indicator</string>

</resources>