<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:columnCount="3"
    android:rowCount="3">

    <!-- DPad row 1 -->

    <Space />

    <ImageButton
        android:id="@+id/kbUp"
        style="@style/d_pad_button"
        android:background="@drawable/arrow_up"
        android:contentDescription="@string/up" />

    <Space />

    <!-- DPad row 2 -->

    <ImageButton
        android:id="@+id/kbLeft"
        style="@style/d_pad_button"
        android:background="@drawable/arrow_up"
        android:contentDescription="@string/left"
        android:rotation="270" />

    <Button
        android:id="@+id/kbOk"
        style="@style/holo_blue_btn"
        android:layout_width="@dimen/media_button_width"
        android:layout_height="@dimen/media_button_height"
        android:layout_gravity="center"
        android:text="@android:string/ok" />

    <ImageButton
        android:id="@+id/kbRight"
        style="@style/d_pad_button"
        android:background="@drawable/arrow_up"
        android:contentDescription="@string/right"
        android:rotation="90" />

    <!-- DPad row 3 -->

    <Space />

    <ImageButton
        android:id="@+id/kbDown"
        style="@style/d_pad_button"
        android:background="@drawable/arrow_up"
        android:contentDescription="@string/down"
        android:rotation="180" />

    <Space />

</GridLayout>